Transform operators do not save state when cancelling #107474

Closed
opened 2023-04-30 00:54:30 +02:00 by beepeekay · 5 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3
Worked: version 3.4.1

Short description of error
Transform operators do not save state when cancelling

Exact steps for others to reproduce the error

The proportional editing size resets itself when the current operation is cancelled (by ESC key/right click, etc). Where up to version 3.4.1, to give an example:

  1. Press G to drag, and scroll to change the proportional size from [0.5 m] to [2 m]
  2. Right click to cancel the operation
  3. Press G again and the proportional size is reset back to [0.5m]
    • However if in 3.4 and earlier versions, the proportional size would retain [2m]

The steps are simply as described above, and I've found this issue on fresh installs of 3.5 betas and the current 3.5.1 release, as well as by importing the previous settings from 3.4. I also tried 3.6.0 alpha (69d52c5f1c) and the issue is also there.

I have been unable to find any mention of this in any release notes, the Blender documentation (while looking for where such a setting might be), or anybody else encountering this issue online. I am concerned if this is an intentional but unannounced change in the modelling workflow, or if it's a bug that may be fixed?

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.68 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` Worked: version 3.4.1 **Short description of error** Transform operators do not save state when cancelling **Exact steps for others to reproduce the error** The proportional editing size resets itself when the current operation is cancelled (by ESC key/right click, etc). Where up to version 3.4.1, to give an example: 1. Press G to drag, and scroll to change the proportional size from [0.5 m] to [2 m] 2. Right click to cancel the operation 3. Press G again and the proportional size is reset back to [0.5m] - However if in 3.4 and earlier versions, the proportional size would retain [2m] The steps are simply as described above, and I've found this issue on fresh installs of 3.5 betas and the current 3.5.1 release, as well as by importing the previous settings from 3.4. I also tried 3.6.0 alpha (69d52c5f1c30) and the issue is also there. I have been unable to find any mention of this in any release notes, the Blender documentation (while looking for where such a setting might be), or anybody else encountering this issue online. I am concerned if this is an intentional but unannounced change in the modelling workflow, or if it's a bug that may be fixed?
beepeekay added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-30 00:54:31 +02:00
Member

This might also be related to undo, will take a look

~~This might also be related to undo, will take a look~~
Member

This seems to be specifically made to work like this, because all other operators do not save their state when cancelled.

See: cc623ee7b0 cc @mano-wii Any input on this? Or if the original way is maybe better in terms of user interaction?

This seems to be specifically made to work like this, because all other operators do not save their state when cancelled. See: cc623ee7b0fc cc @mano-wii Any input on this? Or if the original way is maybe better in terms of user interaction?
YimingWu added
Module
Modeling
Status
Needs Info from Developers
and removed
Status
Needs Triage
labels 2023-04-30 08:07:14 +02:00
YimingWu changed title from Proportional Editing Bug (size persistance) to Transform operators do not save state when cancelling 2023-04-30 08:07:42 +02:00

It was intentional in part. This change lands almost as a bug fix (since operator convention is that cancel undoes all changes). It also better resolved the confusion of when properties need to be saved. So it didn't seem important enough to put in the release notes.

But since the Proportional Edit size is not shown in the UI, I can understand why some users might rely on the canceled transform operation just to change that value.

In addition to the Proportional Edit settings, other settings are saved in the scene, such as Snap Toggle. Is it important to bring this behavior back to Snap's Toggle as well?

I think that before reverting (partially) the change, it would be interesting to discuss the problem and what is the best solution:

  • Confirm the changes in Proportional Edit even canceling the or operation or
  • Being able to edit the size of Proportional Edit through the UI?
It was intentional in part. This change lands almost as a bug fix (since operator convention is that cancel undoes all changes). It also better resolved the confusion of when properties need to be saved. So it didn't seem important enough to put in the release notes. But since the Proportional Edit size is not shown in the UI, I can understand why some users might rely on the canceled transform operation just to change that value. In addition to the Proportional Edit settings, other settings are saved in the scene, such as Snap Toggle. Is it important to bring this behavior back to Snap's Toggle as well? I think that before reverting (partially) the change, it would be interesting to discuss the problem and what is the best solution: - Confirm the changes in Proportional Edit even canceling the or operation or - Being able to edit the size of Proportional Edit through the UI?

This change will revert to further discussion.
But I also proposed #107507 for improvements.

This change will revert to further discussion. But I also proposed #107507 for improvements.
Blender Bot added
Status
Resolved
and removed
Status
Needs Info from Developers
labels 2023-05-01 18:58:57 +02:00
Member

@mano-wii

In addition to the Proportional Edit settings, other settings are saved in the scene, such as Snap Toggle. Is it important to bring this behavior back to Snap's Toggle as well?

I was thinking about this as well, some states aren't really representing "how the last time you used it", but rather global. It's like proportional editing switch itself, it could be thought as a state of the translate tool, but also can ba a global switch. So I'm not entirely sure on this either.

@mano-wii > In addition to the Proportional Edit settings, other settings are saved in the scene, such as Snap Toggle. Is it important to bring this behavior back to Snap's Toggle as well? I was thinking about this as well, some states aren't really representing "how the last time you used it", but rather global. It's like proportional editing switch itself, it could be thought as a state of the translate tool, but also can ba a global switch. So I'm not entirely sure on this either.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107474
No description provided.